# ElGamal_openssl

./: CMakeLists.txt  log.txt
include/: ec_curve.h  ec_elgamal.h
src/: ec_curve.cpp  ec_elgamal.cpp  main.cpp
test/: test_curve.cpp  test_elgamal.cpp
